Save settings to file after changes.

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
       <p>
         <label for="polling_throttle">
-          Update battery status at most every
+          Maximum delay between battery status updates:
           <select id="polling_throttle" name="polling_throttle">
             <option value="1">1 second</option>
             <option value="5">5 seconds</option>
