--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Razor Taskbar - Settings</title>
+  <title>Razer Taskbar - Settings</title>
 </head>
 
 <body>
   <div class="container">
-    <h2>Razor Taskbar Settings</h2>
+    <h2>Razer Taskbar Settings</h2>
     <form>
       <p>
         <label for="run_at_startup_checkbox" style="display: contents;">
